--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
-	<head>
+<head>
     <base href="/" />
     <title>Argo Code Challenge</title>
     <link rel="stylesheet" type="text/css" href=https://fonts.googleapis.com/css?family=Questrial|Montserrat>
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="/angular-material/angular-material.min.css" />
-<!--     <link rel="stylesheet" type="text/css" href="/style.css" /> -->
-<!--     <link rel="stylesheet" type="text/css" href="/jquery-ui/jquery-ui.min.css" /> -->
+    <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link rel="stylesheet" type="text/css" href="/jquery-ui/jquery-ui.min.css" />
     <script src="/lodash/index.js"></script>
     <script src="/jquery/dist/jquery.min.js"></script>
     <script src="/jquery-ui/jquery-ui.min.js"></script>
@@ -16,27 +16,22 @@
     <script src="/angular-aria/angular-aria.min.js"></script>
     <script src="/angular-material/angular-material.min.js"></script>
     <script src="/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="/angular-ui-sortable/dist/sortable.min.js"></script>
     <script src="/angular-ui-bootstrap/ui-bootstrap.js"></script>
     <script src="/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
-    <link rel="stylesheet" type="text/css" href="dist/semantic.min.css">
-		<script src="dist/semantic.min.js"></script>
-    <script src="/js/app.js"></script>
-    <script src="/js/sidebar/sidebar.directive.js"></script>
-    <script src="/js/form/form.js"></script>
-    <script src="/js/search_result/search_result.js"></script>
-	</head>
+    <script src="/angular-ui-sortable/dist/sortable.min.js"></script>
+    <script src="/socket.io-client/socket.io.js"></script>
+    <script src="/main.js"></script>
+</head>
 
-	<body ng-app="argo" layout="column">
-		<div class="ui container">
-  		<h1>This is an app to help Argo Digital underwriters to visualize & explore data in their database</h1>
-      <a ui-sref="form">Start</a>
-      <ui-view></ui-view>
-  	</div>
-<!--   	<div class='col-xs-2'>
-  		<sidebar></sidebar>
-  	</div> -->
+<body ng-app="Argo" layout="column">
+  <md-content layout-fill>
+    <navbar></navbar>
+    <div id="main" ui-view></div>
 
-    	<!-- <div id="main" ui-view></div> -->
-	</body>
-</html>
- 
+  </md-content>
+
+  <fab></fab>
+
+</body>
+</html> -->
